# copy

./: Cargo.toml  config.json
fsdownload/: Cargo.toml  README.md  config.json  fetch_pools.rs  mock_trades.json  test_trades.json
fsdownload/src/: config.rs  grpc_monitor.rs  lib.rs  main.rs  mock_monitor.rs  pool_loader.rs  test_runner.rs  trade_executor.rs  trade_recorder.rs
fsdownload/src/dex/: mod.rs
fsdownload/src/dex/pump/: amm_info.rs  constants.rs  mod.rs
fsdownload/src/dex/raydium/: amm_info.rs  clmm_info.rs  constants.rs  cp_amm_info.rs  mod.rs
fsdownload/src/parser/: mod.rs  pump.rs  raydium.rs  raydium_cpmm.rs
fsdownload/src/types/: mod.rs
fsdownload/trades/: trade_20250713_165409_1s6Zg6RQ.json  trade_20250713_165509_3Kj4dRo9.json  trade_records.json
src/: config.rs  dex_detector.rs  grpc_monitor.rs  main.rs
src/parser/: mod.rs
src/types/: mod.rs
