[package]
name = "wallet_copier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana相关依赖 - 使用兼容的旧版本
solana-client = "1.14.19"
solana-sdk = "1.14.19"
solana-transaction-status = "1.14.19"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
solana-program = "1.14.19"

# 异步运行时
tokio = { version = "1.29", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"

# 时间处理
chrono = "0.4"

# 其他工具
base58 = "0.2"
bs58 = "0.4"
bincode = "1.3"
borsh = "1.0"

# gRPC相关依赖 - 使用更旧但稳定的版本
yellowstone-grpc-client = { version = "1.10.0", default-features = false }
yellowstone-grpc-proto = { version = "1.10.0", default-features = false }
tonic = { version = "0.8.3", features = ["transport", "tls"] }
prost = "0.11"
tokio-stream = "0.1"
futures = "0.3"