[package]
name = "wallet_copier"
version = "0.1.0"
edition = "2021"

[dependencies]
# Solana相关依赖 - 使用更新的版本
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.18"
spl-token = "3.5"
spl-associated-token-account = "1.1"
solana-program = "1.18"
solana-account-decoder = "1.17"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"

# 时间处理
chrono = "0.4"

# 其他工具
base58 = "0.2"
bs58 = "0.4"
bincode = "1.3"
borsh = "1.0"

# gRPC相关依赖
yellowstone-grpc-client = { version = "1.10", default-features = false }
yellowstone-grpc-proto = { version = "1.10", default-features = false }
tonic = { version = "0.9", features = ["transport", "tls"] }
prost = "0.11"
tokio-stream = "0.1"
futures = "0.3"